<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


            <LinearLayout
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lrBase"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_30"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_100"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:src="@drawable/logo_login"
                    android:visibility="visible"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColorHint="@color/colorPrimary">


                        <com.driver.customclasses.CustomEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_45"
                            android:layout_gravity="center_horizontal"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:hint="@string/email_address"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLines="1"
                            android:padding="@dimen/dp_5"
                            android:singleLine="true"
                            android:textColor="@color/new_gray"
                            android:textColorHint="@color/text_color_blue"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/sp_15"
                            app:fontName="@string/font_bold"></com.driver.customclasses.CustomEditText>
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tIGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp_2"
                        android:textAlignment="center"
                        android:textColorHint="@color/colorPrimary">


                        <com.driver.customclasses.CustomEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_45"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dp_5"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLines="1"
                            android:padding="@dimen/dp_5"
                            android:singleLine="true"
                            android:textColor="@color/new_gray"
                            android:textColorHint="@color/colorPrimary"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/sp_15"
                            app:fontName="@string/font_bold"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout

                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">


                    <CheckBox
                        android:checked="false"
                        android:id="@+id/remember"
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:background="@drawable/remeber_me_selector"
                        android:button="@null" />

                    <com.driver.customclasses.CustomTextView
                        android:layout_marginLeft="@dimen/dp_5"
                        android:id="@+id/txtTems"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        android:ellipsize="end"
                        android:gravity="left|center_vertical"
                        android:maxLines="1"
                        android:text="Remember me"
                        android:textColor="@color/White"
                        android:textSize="@dimen/sp_18"
                        app:fontName="@string/font_regular" />


                </LinearLayout>


                <com.driver.customclasses.CustomTextView

                    android:id="@+id/textForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="right"
                    android:layout_marginTop="@dimen/dp_5"
                    android:padding="@dimen/dp_10"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_14"
                    app:fontName="@string/font_regular"/>




        <com.driver.customclasses.CustomButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/login_btn"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_2"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_16"
                    app:fontName="@string/font_bold"/>
                <com.driver.customclasses.CustomButton
                    android:id="@+id/btnsignup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/google_btn"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_2"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_16"
                    app:fontName="@string/font_bold"/>
                <com.driver.customclasses.CustomButton
                    android:id="@+id/buttonFB"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/rounded_corner_buttons_fb"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:visibility="gone"
                    android:text="@string/login_with_facebook"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_16"
                    app:fontName="@string/font_bold"/>

                <com.driver.customclasses.CustomTextView

                    android:id="@+id/textVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_15"
                    android:padding="@dimen/dp_10"
                    android:text="v1.5(6)"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_16"
                    app:fontName="@string/font_regular"/>

            </LinearLayout>
          <!--  <com.laoxidriver.customclasses.CustomButton

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/lrBase"

                android:background="@color/color_button_login_bottom"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/don_t_have_an_account_sign_up"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/White"
                android:textSize="@dimen/sp_16"
                app:fontName="@string/font_regular"/>-->



    </ScrollView>


